# fuzzy-phrase

./: .codecov.yml  .travis.yml  Cargo.toml  LICENSE.md  README.md  profile_osx.sh
.circleci/: config.yml
benches/: benchmarks.rs  fuzzy.rs  glue.rs  phrase.rs  prefix.rs
benches/data/: phrase_test.txt  phrase_test_cities.txt  phrase_test_cities_ar.txt  phrase_test_cities_ru.txt  phrase_test_sample.txt  phrase_test_shared_prefix.txt  phrase_test_states.txt  phrase_test_typos.txt
scripts/: bench.sh
src/: errors.rs  lib.rs
src/fuzzy/: map.rs  mod.rs  util.rs
src/glue/: enum_number.rs  fuzz_tests.rs  mod.rs  replacement_tests.rs  util.rs
src/glue/unicode_ranges/: mod.rs  tables.rs
src/phrase/: mod.rs  query.rs  set.rs  tests.rs  util.rs  word.rs
src/prefix/: boilerplate.rs  mod.rs  tests.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
