[package]
name = "fuzzy-phrase"
version = "0.1.0"
authors = ["Andrew Pendleton <andrew@mapbox.com>"]

[dependencies]
fst = "0.3.0"
byteorder = "1.2.2"
itertools = "0.7.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.memmap]
version = "0.6.0"
optional = true

[dev-dependencies]
reqwest = "0.8.5"
criterion = "0.2"
tempfile = "3.0.2"

[features]
default = ["mmap"]
mmap = ["memmap"]

[[bench]]
name = "benchmarks"
harness = false