[package]
name = "fuzzy-phrase"
version = "0.1.0"
authors = ["Andrew Pendleton <andrew@mapbox.com>"]

[dependencies]
fst = "0.3.0"
byteorder = "1.2.2"
itertools = "0.7.8"
strsim = "0.7.0"
serde = "1.0.37"
serde_derive = "1.0.37"
rmp-serde = "0.13.7"

[dependencies.memmap]
version = "0.6.0"
optional = true

[dev-dependencies]
reqwest = "0.8.5"
criterion = "0.2"
tempfile = "3.0.2"
rand = "0.5.0"

[features]
default = ["mmap"]
mmap = ["memmap"]

[[bench]]
name = "benchmarks"
harness = false
